# sms_auditor_agent

./: .gitignore  .rule_chunks.json  README.md  embeddings.py  llm_config.json  llm_providers.py  pyproject.toml  rule_retriever.py  sms_auditor_langchain.py  sms_auditor_llm.py
langchain_agent/: __init__.py  minimax_embeddings.py  rule_retriever.py  sms_auditor.py
rules/: 00_短信合规总纲.md  01_验证码短信规范.md  02_营销短信规范.md  03_催收短信规范.md  04_权益通知短信规范.md
vanilla/: __init__.py  embeddings.py  llm_providers.py  rule_retriever.py  sms_auditor_llm.py
